# firmware_updater

./: README.md  main_firmware_update.c  master_firmware_uploader.c
demo/: build_slave_bins.py  demo_master_greeting.c  demo_master_uploader.c  dummy_slave_main.c
demo/demomaster/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
demo/demomaster/canopennode/: CMakeLists.txt  CO_driver.c  CO_driver_target.h
demo/demomaster/canopennode/301/: CO_driver_target.h
demo/demomaster/main/: CMakeLists.txt  Kconfig.projbuild  demo_master_app.c  master_uploader_demo.c  master_uploader_demo.h
demo/demomaster/storage/: README.txt
demo/demoslave/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
demo/demoslave/build-bye/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  demoslave.elf  demoslave.map  flash_app_args  flash_project_args  ldgen_libraries  project_description.json  x509_crt_bundle.S
demo/demoslave/build-bye/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
demo/demoslave/build-bye/config/: kconfig_menus.json
demo/demoslave/build-bye/esp-idf/: cmake_install.cmake
demo/demoslave/build-bye/gdbinit/: gdbinit  (+1 more)
demo/demoslave/build-hello/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  demoslave.elf  demoslave.map  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
demo/demoslave/canopennode/: CMakeLists.txt  CO_driver.c  OD.c  OD.h
demo/demoslave/main/: CMakeLists.txt  Kconfig.projbuild  fw_update_server.c  fw_update_server.h
demo/esp-idf_slave/: CMakeLists.txt
demo/esp-idf_slave/main/: CMakeLists.txt  Kconfig.projbuild
(+106 files in other folders)
